# gui3d-for-VSLAM

./: CMakeLists.txt  README.md  Readme.md  demo.cpp  demo_viz.cpp  example_instance.cpp  example_opengl_objects.cpp  imgui.ini  main.cpp  test.cpp
cmake_modules/: FindEigen3.cmake
data/: scene.txt
inc/gui3d/: gui.h  plot.h
inc/gui3d/base/: io.h  log.h  math.h  system.h  timer.h  type_def.h
inc/gui3d/render/: figure.h  model_render.h  observer.h  options.hpp  parameter.h  style.h
inc/gui3d/utils/: cast_utils.h  dependency.hpp  mouse.h
inc/gui3d/window/: CDisplayImages.h  CDisplayWindow3D.h  CGlCanvas.h
samples/: CGlCanvas.cpp  CGlCanvas.h  CMakeLists.txt  demo_viz.cpp  example_glfw_opengl2.cpp  example_imgui_scene.cc  example_load_scene.cpp  example_mrpt.cpp  imgui_test.cc  mrpt_test.cpp  test.cpp
src/gui3d/: gui.cpp  gui.h
src/gui3d/base/: io.h  math.h  timer.h  type_def.h
src/gui3d/imguifilesystem/: imguifilesystem.h
src/gui3d/render/: figure.cpp  figure.h  gui.cpp  model_render.cpp  model_render.h  observer.cpp  parameter.h  plots.cpp  ply.cpp  scene_manager.cpp  scene_manager.h  sys_channel.cpp  system.h
src/gui3d/utils/: cast_utils.cpp  cast_utils.h  dependency.hpp  file_utils.cpp  mouse.h
src/gui3d/window/: CDisplayImages.cpp  CDisplayImages.h  CDisplayWindow3D.cpp  CDisplayWindow3D.h  CGlCanvas.cpp  CGlCanvas.h  CImGui.h
